--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 django>=4.2
 django-environ
 dj-database-url
+djangorestframework
 
 # ASGI + websocket stack
 channels
@@ -9,7 +10,6 @@ daphne
 
 # Redis channel layer
 channels-redis
-rest_framework
 # Database (Postgres)
 psycopg2-binary
 
